@@ -108,49 +108,3 @@ int strncasecmp(const char *s1, const char *s2, size_t n)
     return 1;
   return 0;
 }
-
-
-/*
- * From FreeBSD libkern
- *
- * Shift a (signed) quad value left (arithmetic shift left).
- * This is the same as logical shift left!
- */
-typedef long long quad_t;
-typedef unsigned long long u_quad_t;
-typedef unsigned int qshift_t;
-
-#define CHAR_BIT 8
-#define QUAD_BITS (sizeof(quad_t) * CHAR_BIT)
-#define LONG_BITS (sizeof(long) * CHAR_BIT)
-#define _QUAD_HIGHWORD 0 /* Big-endian */
-#define _QUAD_LOWWORD 1
-#define H _QUAD_HIGHWORD
-#define L _QUAD_LOWWORD
-
-union uu {
-  quad_t q;/* as a (signed) quad */
-  quad_t uq;/* as an unsigned quad */
-  long sl[2];/* as two signed longs */
-  unsigned long ul[2];/* as two unsigned longs */
-};
-
-quad_t
-__ashldi3(a, shift)
-     quad_t a;
-     qshift_t shift;
-{
-  union uu aa;
-
-  aa.q = a;
-  if (shift >= LONG_BITS) {
-    aa.ul[H] = shift >= QUAD_BITS ? 0 :
-      aa.ul[L] << (shift - LONG_BITS);
-    aa.ul[L] = 0;
-  } else if (shift > 0) {
-    aa.ul[H] = (aa.ul[H] << shift) |
-      (aa.ul[L] >> (LONG_BITS - shift));
-    aa.ul[L] <<= shift;
-  }
-  return (aa.q);
-}
