@@ -1,0 +1,55 @@
+<?xml version="1.0"?>
+<?eclipse-cdt version="2.0"?>
+<cdtproject id="org.eclipse.cdt.make.core.make">
+  <extension point="org.eclipse.cdt.core.BinaryParser" id="org.eclipse.cdt.core.ELF"/>
+  <data>
+    <item id="scannerConfiguration">
+      <autodiscovery enabled="true" selectedProfileId="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile" problemReportingEnabled="true"/>
+      <profile id="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile">
+        <buildOutputProvider>
+          <openAction enabled="true" filePath=""/>
+          <parser enabled="true"/>
+        </buildOutputProvider>
+        <scannerInfoProvider id="specsFile">
+          <runAction useDefault="true" command="gcc" arguments="-E -P -v -dD ${plugin_state_location}/${specs_file}"/>
+          <parser enabled="true"/>
+        </scannerInfoProvider>
+      </profile>
+      <profile id="org.eclipse.cdt.make.core.GCCStandardMakePerFileProfile">
+        <buildOutputProvider>
+          <openAction enabled="false" filePath=""/>
+          <parser enabled="true"/>
+        </buildOutputProvider>
+        <scannerInfoProvider id="makefileGenerator">
+          <runAction useDefault="true" command="make" arguments="-f ${project_name}_scd.mk"/>
+          <parser enabled="false"/>
+        </scannerInfoProvider>
+      </profile>
+      <profile id="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfile">
+        <buildOutputProvider>
+          <openAction enabled="false" filePath=""/>
+          <parser enabled="true"/>
+        </buildOutputProvider>
+        <scannerInfoProvider id="specsFile">
+          <runAction useDefault="true" command="gcc" arguments="-E -P -v -dD ${plugin_state_location}/${specs_file}"/>
+          <parser enabled="false"/>
+        </scannerInfoProvider>
+      </profile>
+      <profile id="org.eclipse.cdt.managedbuilder.core.GCCWinManagedMakePerProjectProfile">
+        <buildOutputProvider>
+          <openAction enabled="false" filePath=""/>
+          <parser enabled="true"/>
+        </buildOutputProvider>
+        <scannerInfoProvider id="specsFile">
+          <runAction useDefault="true" command="gcc" arguments="-E -P -v -dD ${plugin_state_location}/${specs_file}"/>
+          <parser enabled="false"/>
+        </scannerInfoProvider>
+      </profile>
+    </item>
+    <item id="org.eclipse.cdt.core.pathentry">
+      <pathentry kind="src" path=""/>
+      <pathentry kind="out" path=""/>
+      <pathentry kind="con" path="org.eclipse.cdt.make.core.DISCOVERED_SCANNER_INFO"/>
+    </item>
+  </data>
+</cdtproject>
